log
gcc -c -g -Wall -Wno-unused-function -O2 -march=native -DHAVE_PTHREAD -DUSE_MALLOC_WRAPPERS  ksw.c -o ksw.o
ksw.c:33:9: note: #pragma message: Using Intel intrinsics
 #pragma message "Using Intel intrinsics"
         ^~~~~~~
ksw.c: In function ‘ksw_u8’:
ksw.c:326:73: error: incompatible type for argument 1 of ‘_mm_subs_epu8’
                 cmp = _mm256_movemask_epi8(_mm_cmpeq_epi8(_mm_subs_epu8(f, h), zero));
                                                                         ^
In file included from /usr/lib/gcc/x86_64-pc-linux-gnu/6.2.1/include/xmmintrin.h:1249:0,
                 from /usr/lib/gcc/x86_64-pc-linux-gnu/6.2.1/include/immintrin.h:29,
                 from ksw.c:34:
/usr/lib/gcc/x86_64-pc-linux-gnu/6.2.1/include/emmintrin.h:1095:1: note: expected ‘__m128i {aka __vector(2) long long int}’ but argument is of type ‘__m256i {aka __vector(4) long long int}’
 _mm_subs_epu8 (__m128i __A, __m128i __B)
 ^~~~~~~~~~~~~
ksw.c:326:76: error: incompatible type for argument 2 of ‘_mm_subs_epu8’
                 cmp = _mm256_movemask_epi8(_mm_cmpeq_epi8(_mm_subs_epu8(f, h), zero));
                                                                            ^
In file included from /usr/lib/gcc/x86_64-pc-linux-gnu/6.2.1/include/xmmintrin.h:1249:0,
                 from /usr/lib/gcc/x86_64-pc-linux-gnu/6.2.1/include/immintrin.h:29,
                 from ksw.c:34:
/usr/lib/gcc/x86_64-pc-linux-gnu/6.2.1/include/emmintrin.h:1095:1: note: expected ‘__m128i {aka __vector(2) long long int}’ but argument is of type ‘__m256i {aka __vector(4) long long int}’
 _mm_subs_epu8 (__m128i __A, __m128i __B)
 ^~~~~~~~~~~~~
ksw.c:326:80: error: incompatible type for argument 2 of ‘_mm_cmpeq_epi8’
                 cmp = _mm256_movemask_epi8(_mm_cmpeq_epi8(_mm_subs_epu8(f, h), zero));
                                                                                ^~~~
In file included from /usr/lib/gcc/x86_64-pc-linux-gnu/6.2.1/include/xmmintrin.h:1249:0,
                 from /usr/lib/gcc/x86_64-pc-linux-gnu/6.2.1/include/immintrin.h:29,
                 from ksw.c:34:
/usr/lib/gcc/x86_64-pc-linux-gnu/6.2.1/include/emmintrin.h:1292:1: note: expected ‘__m128i {aka __vector(2) long long int}’ but argument is of type ‘__m256i {aka __vector(4) long long int}’
 _mm_cmpeq_epi8 (__m128i __A, __m128i __B)
 ^~~~~~~~~~~~~~
ksw.c: In function ‘ksw_i16’:
ksw.c:508:17: warning: implicit declaration of function ‘_mm256_load_si258’ [-Wimplicit-function-declaration]
             e = _mm256_load_si258(E + j);
                 ^~~~~~~~~~~~~~~~~
ksw.c:508:15: error: incompatible types when assigning to type ‘__m256i {aka __vector(4) long long int}’ from type ‘int’
             e = _mm256_load_si258(E + j);
               ^
ksw.c:512:13: warning: implicit declaration of function ‘_mm256_store_si258’ [-Wimplicit-function-declaration]
             _mm256_store_si258(H1 + j, h);
             ^~~~~~~~~~~~~~~~~~
ksw.c:519:15: error: incompatible types when assigning to type ‘__m256i {aka __vector(4) long long int}’ from type ‘int’
             h = _mm256_load_si258(H0 + j);
               ^
make: *** [Makefile:25: ksw.o] Error 1
